<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/contatti"
            android:title="@string/menu_contatti" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/add"
            android:title="@string/menu_add_contatto" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/new_event"
            android:title="@string/menu_new_event" />
        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/exit"
            android:title="@string/menu_exit" />
    </group>
</menu>