<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="97dp"
        android:layout_height="99dp"
        android:src="@mipmap/logo_foreground"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_account"
        android:textSize="34sp"
        android:gravity="center_horizontal"
        android:textStyle="bold"
        android:layout_marginTop="30dp"/>

    <EditText
        android:id="@+id/et_user_name"
        android:layout_width="316dp"
        android:layout_height="44dp"
        android:layout_marginTop="18dp"
        android:padding="8dp"
        android:background="@drawable/style_border"
        android:hint="@string/username"
        android:inputType="text"
        android:textColorHint="#8B000000"
        android:visibility="visible"
        android:layout_gravity="center_horizontal"/>

    <EditText
        android:id="@+id/et_email"
        android:layout_width="316dp"
        android:layout_height="44dp"
        android:layout_marginTop="5dp"
        android:padding="8dp"
        android:background="@drawable/style_border"
        android:hint="@string/email"
        android:inputType="text"
        android:textColorHint="#8D020202"
        android:layout_gravity="center_horizontal"/>

    <EditText
        android:id="@+id/et_password"
        android:layout_width="316dp"
        android:layout_height="44dp"
        android:layout_marginTop="5dp"
        android:padding="8dp"
        android:background="@drawable/style_border"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHint="#8C000000"
        android:layout_gravity="center_horizontal"/>

    <EditText
        android:id="@+id/et_confirm_pwd"
        android:layout_width="316dp"
        android:layout_height="44dp"
        android:layout_marginTop="5dp"
        android:padding="8dp"
        android:background="@drawable/style_border"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:textColorHint="#8C000000"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="316dp"
        android:layout_height="44dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/border_black"
        android:text="@string/button_save_event"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>