<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <TextView
        android:id="@+id/textViewBenvenuto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/welcome"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvInviti"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/invitations"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewBenvenuto"
    />

    <FrameLayout
        android:id="@+id/frameLayoutBox1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="45dp"
        android:layout_marginBottom="28dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/border_black"
        android:padding="4dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewBenvenuto"
        app:layout_constraintBottom_toTopOf="@+id/frameLayoutBox2"
        app:layout_constraintStart_toStartOf="parent"
        android:backgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/messageTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_events"
            android:visibility="gone"
            android:padding="16dp"/>

        <ListView
            android:id="@+id/lv_eventi"
            android:layout_width="match_parent"
            android:layout_height="600dp"
            android:layout_weight="1"
            android:divider="@android:color/darker_gray"
            android:dividerHeight="0.5dp"
            android:padding="16dp" />

        <TextView
            android:id="@+id/tv_mostra_altro1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_more"
            android:textColor="@android:color/black"
            android:background="?attr/selectableItemBackground"
            android:padding="8dp"
            android:layout_gravity="bottom|start"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"/>

    </FrameLayout>

    <TextView
        android:id="@+id/textViewInvitiCreati"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/created_events"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/frameLayoutBox1"
        app:layout_constraintBottom_toTopOf="@id/frameLayoutBox2"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="18dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"/>

    <FrameLayout
        android:id="@+id/frameLayoutBox2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="28dp"
        android:layout_marginBottom="18dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/border_black"
        android:backgroundTint="@color/white"

        android:padding="4dp"
        app:layout_constraintTop_toBottomOf="@+id/frameLayoutBox1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/messageTextView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_events"
            android:visibility="gone"
            android:padding="16dp"/>

        <ListView
            android:id="@+id/lv_eventi_confermati"
            android:layout_width="match_parent"
            android:layout_height="600dp"
            android:layout_weight="1"
            android:divider="@android:color/darker_gray"
            android:dividerHeight="0.5dp"
            android:padding="16dp" />

        <TextView
            android:id="@+id/tv_mostra_altro2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_more"
            android:textColor="@android:color/black"
            android:background="?attr/selectableItemBackground"
            android:padding="8dp"
            android:layout_gravity="bottom|start"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"/>

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
